--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
 
         // run the webcam image through the image model
         async function predict() {
-            // predict can take in an image, video or canvas html element
             const prediction = await model.predict(webcam.canvas);
-            for (let i = 0; i < maxPredictions; i++) {
-                const classPrediction =
-                    prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                labelContainer.childNodes[i].innerHTML = classPrediction;
+            if (prediction[0].probability > 0.8) { 
+                document.body.style.backgroundColor = "blue";
+            } else {
+                document.body.style.backgroundColor = "white";
             }
         }
     </script>
