--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body {
             transition: background-color 0.5s ease;
             text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 5em;
         }
         #display-image {
             width: 300px;
@@ -20,7 +22,7 @@
 </head>
 
 <body>
-    <div>Teachable Machine Image Model</div>
+    <div>Emotie Test Prototype</div>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
