--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             display: none; /* Verborgen totdat een klasse >80% is */
             margin: 20px auto;
         }
+
+        body button{
+            font-size: 0.5em;
+            background-color: black;
+            color: white;
+            padding: 0.5em 1em;
+            border-radius: 10%;
+        }
     </style>
 </head>
 
