--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <title>Test Mart van Hemert</title>
     <style>
         body {
-            transition: background-color 0.5s ease;
+            transition: background-color 1s ease;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 5em;
+            animation: none;
         }
-        #display-image {
-            width: 300px;
-            height: 300px;
-            display: none; /* Verborgen totdat een klasse >80% is */
-            margin: 20px auto;
+        
+        @keyframes pulse {
+            0% { background-color: rgba(255, 0, 0, 0.5); }
+            50% { background-color: rgba(0, 255, 0, 0.5); }
+            100% { background-color: rgba(0, 0, 255, 0.5); }
+        }
+        
+        body.pulse-animation {
+            animation: pulse 2s infinite alternate;
         }
 
-        body button{
+        button {
             font-size: 0.5em;
             background-color: black;
             color: white;
@@ -33,79 +38,49 @@
     <div>Emotie Test Prototype</div>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
-    <img id="display-image" src="" alt="Class Image">
     <div id="label-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
-        // More API functions here:
-        // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
-
-        // the link to your model provided by Teachable Machine export panel
         const URL = "./tm-my-image-model/";
+        let model, webcam, labelContainer, maxPredictions;
 
-        let model, webcam, labelContainer, maxPredictions, imgElement;
-
-        // Load the image model and setup the webcam
         async function init() {
             const modelURL = URL + "model.json";
             const metadataURL = URL + "metadata.json";
 
-            // load the model and metadata
-            // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-            // or files from your local hard drive
-            // Note: the pose library adds "tmImage" object to your window (window.tmImage)
             model = await tmImage.load(modelURL, metadataURL);
             maxPredictions = model.getTotalClasses();
 
-            // Convenience function to setup a webcam
-            const flip = true; // whether to flip the webcam
-            webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-            await webcam.setup(); // request access to the webcam
+            const flip = true;
+            webcam = new tmImage.Webcam(200, 200, flip);
+            await webcam.setup();
             await webcam.play();
             window.requestAnimationFrame(loop);
-            imgElement = document.getElementById("display-image");
 
-            // append elements to the DOM
             document.getElementById("webcam-container").appendChild(webcam.canvas);
             labelContainer = document.getElementById("label-container");
-            for (let i = 0; i < maxPredictions; i++) { // and class labels
+            for (let i = 0; i < maxPredictions; i++) {
                 labelContainer.appendChild(document.createElement("div"));
             }
         }
 
         async function loop() {
-            webcam.update(); // update the webcam frame
+            webcam.update();
             await predict();
             window.requestAnimationFrame(loop);
         }
 
-        // run the webcam image through the image model
-
         async function predict() {
             const prediction = await model.predict(webcam.canvas);
             let probabilities = prediction.map(p => p.probability);
+            let maxProb = Math.max(...probabilities);
+            let index = probabilities.indexOf(maxProb);
 
-            // Groen en rood wisselen
-            let g = Math.floor(probabilities[0] * 255); // Groen (was Rood)
-            let r = Math.floor(probabilities[1] * 255); // Rood (was Groen)
-            let b = Math.floor(probabilities[2] * 255); // Blauw blijft hetzelfde
-
-            document.body.style.backgroundColor = `rgb(${r}, ${g}, ${b})`;
-
-            // Afbeelding weergeven afhankelijk van de hoogste klasse boven 80%
-            if (probabilities[0] > 0.5) {
-                imgElement.src = "image1.png";
-                imgElement.style.display = "block";
-            } else if (probabilities[1] > 0.5) {
-                imgElement.src = "image2.jpg";
-                imgElement.style.display = "block";
-            } else if (probabilities[2] > 0.5) {
-                imgElement.src = "image3.png";
-                imgElement.style.display = "block";
+            if (maxProb > 0.5) {
+                document.body.classList.add("pulse-animation");
             } else {
-                imgElement.style.display = "none"; // Verberg als geen enkele klasse >80% is
+                document.body.classList.remove("pulse-animation");
             }
 
             for (let i = 0; i < maxPredictions; i++) {
@@ -114,7 +89,6 @@
             }
         }
     </script>
-
 </body>
 
 </html>
