--- a/index.html
+++ b/index.html
@@ -40,11 +40,20 @@
             width: 200px;
             height: 200px;
         }
+
+        #label-container {
+            position: absolute;
+            top: 220px;
+            left: 10px;
+            width: 200px;
+            text-align: left;
+            font-size: 0.3em;
+        }
     </style>
 </head>
 
 <body>
-    <div>verdrietig/boos naar blij</div>
+    <div>Emotie Test Prototype</div>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
@@ -101,4 +110,5 @@
 </body>
 
 </html>
+
 
