--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Test Mart van Hemert</title>
     <style>
         body {
+            background-color: black;
+            color: white;
+            font-size: 2em;
             position: absolute;
             inset: 0;
             display: flex;
@@ -48,7 +51,7 @@
         }
 
         button {
-            font-size: 0.5em;
+            font-size: 1em;
             background-color: black;
             color: white;
             padding: 0.5em 1em;
@@ -72,7 +75,7 @@
             left: 10px;
             width: 200px;
             text-align: left;
-            font-size: 0.3em;
+            font-size: 1em;
             z-index: 10;
         }
     </style>
@@ -80,7 +83,7 @@
 
 <body>
     <div class="gradient"></div>
-    <div>abstract versie</div>
+    <div>Emotie Test Prototype</div>
     <button type="button" onclick="init()">Start</button>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
@@ -128,10 +131,10 @@
                 gradient.style.animationDuration = "60s";
                 gradient.style.backgroundImage = "linear-gradient(hsl(120, 84%, 60%), hsl(164, 79%, 71%))";
             } else if (index === 1) { // Boos
-                gradient.style.animationDuration = "20s";
+                gradient.style.animationDuration = "10s";
                 gradient.style.backgroundImage = "linear-gradient(hsl(0, 84%, 60%), hsl(10, 79%, 71%))";
             } else if (index === 2) { // Verdrietig
-                gradient.style.animationDuration = "20s";
+                gradient.style.animationDuration = "10s";
                 gradient.style.backgroundImage = "linear-gradient(hsl(220, 84%, 60%), hsl(240, 79%, 71%))";
             }
 
@@ -144,5 +147,6 @@
 </body>
 
 </html>
+
 
 
