--- a/test.html
+++ b/test.html
@@ -7,60 +7,81 @@
     <title>Test Mart van Hemert</title>
     <style>
         body {
-            background: black;
-            color: white;
-            font-size: 2em;
-            position: absolute;
-            inset: 0;
-            display: flex;
-            place-content: center;
-            align-items: center;
+            background: #1a1e23;
+            margin: 0;
             overflow: hidden;
         }
 
-        .wrap {
+        .bubbles {
             position: relative;
-            height: 100%;
             width: 100%;
+            height: 100vh;
+            overflow: hidden;
         }
 
-        .c {
+        .bubble {
             position: absolute;
-            height: 400px;
-            width: 0.69444%;
-            margin-top: -400px;
-            animation: drop 4s infinite ease-in;
+            left: var(--bubble-left-offset);
+            bottom: -75%;
+            display: block;
+            width: var(--bubble-radius);
+            height: var(--bubble-radius);
+            border-radius: 50%;
+            animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
         }
 
-        @keyframes drop {
-            80% {
-                opacity: 1;
-            }
-            100% {
-                transform: translate3d(0, 150vh, 0);
-                opacity: 0;
+        .bubble::before {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: hsla(183, 94%, 76%, 0.3);
+            border-radius: inherit;
+            animation: sway 5s ease-in-out alternate infinite;
+        }
+
+        @keyframes float-up {
+            to {
+                transform: translateY(-175vh);
             }
         }
 
-        /* Dynamische kleurinstellingen */
-        @for $i from 1 through 144 {
-            $hue: (300 / 144) * $i;
-            .c:nth-child(#{$i}) {
-                left: ($i - 1) * 0.69444%;
-                background-image: linear-gradient(to bottom, black, hsla($hue, 100%, 50%, 0.8));
-                animation-delay: random(144) * (4 / 144) * -1s;
+        @keyframes sway {
+            from {
+                transform: translateX(-10%);
+            }
+            to {
+                transform: translateX(10%);
             }
         }
     </style>
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="bubbles">
         <script>
-            for (let i = 0; i < 144; i++) {
+            for (let i = 0; i < 50; i++) {
                 let div = document.createElement("div");
-                div.classList.add("c");
-                document.querySelector(".wrap").appendChild(div);
+                div.classList.add("bubble");
+                document.querySelector(".bubbles").appendChild(div);
+            }
+
+            function updateBubbles(emotion) {
+                let bubbles = document.querySelectorAll(".bubble");
+                bubbles.forEach(bubble => {
+                    if (emotion === "blij") {
+                        bubble.style.animationDuration = "12s";
+                        bubble.style.background = "hsla(120, 100%, 50%, 0.3)";
+                    } else if (emotion === "boos") {
+                        bubble.style.animationDuration = "6s";
+                        bubble.style.background = "hsla(0, 100%, 50%, 0.3)";
+                    } else if (emotion === "verdrietig") {
+                        bubble.style.animationDuration = "6s";
+                        bubble.style.background = "hsla(220, 100%, 50%, 0.3)";
+                    }
+                });
             }
         </script>
     </div>
@@ -106,7 +127,17 @@
         async function predict() {
             const prediction = await model.predict(webcam.canvas);
             let probabilities = prediction.map(p => p.probability);
-            
+            let maxProb = Math.max(...probabilities);
+            let index = probabilities.indexOf(maxProb);
+
+            if (index === 0) { // Blij
+                updateBubbles("blij");
+            } else if (index === 1) { // Boos
+                updateBubbles("boos");
+            } else if (index === 2) { // Verdrietig
+                updateBubbles("verdrietig");
+            }
+
             for (let i = 0; i < maxPredictions; i++) {
                 labelContainer.childNodes[i].innerHTML =
                     prediction[i].className + ": " + probabilities[i].toFixed(2);
@@ -116,6 +147,7 @@
 </body>
 
 </html>
+
 
 
 
