--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Mart van Hemert</title>
+    <title>Emotie Test</title>
     <style>
         body {
             margin: 0;
@@ -13,10 +13,12 @@
         }
 
         .bubbles {
-            position: relative;
+            position: absolute;
             width: 100%;
-            height: 100vh;
-            overflow: hidden;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1; /* Zorg ervoor dat de bubbels achter de inhoud blijven */
         }
 
         .bubble {
@@ -27,44 +29,13 @@
             width: var(--bubble-radius);
             height: var(--bubble-radius);
             border-radius: 50%;
+            background-color: var(--bubble-color, hsla(183, 94%, 76%, 0.3));
             animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
-
-            &::before {
-                position: absolute;
-                content: '';
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: hsla(183, 94%, 76%, 0.3);
-                border-radius: inherit;
-                animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
-            }
         }
 
         @keyframes float-up {
             to {
                 transform: translateY(-175vh);
-            }
-        }
-
-        @keyframes sway-left-to-right {
-            from {
-                transform: translateX(-100%);
-            }
-
-            to {
-                transform: translateX(100%);
-            }
-        }
-
-        @keyframes sway-right-to-left {
-            from {
-                transform: translateX(100%);
-            }
-
-            to {
-                transform: translateX(-100%);
             }
         }
 
@@ -79,13 +50,15 @@
             padding: 0.5em 1em;
             border-radius: 10%;
             position: relative;
-            z-index: 10;
+            z-index: 10; /* Zorg ervoor dat de startknop boven andere elementen staat */
+            margin: 20px;
         }
 
         #testpage {
             position: absolute;
             top: 10px;
             right: 10px;
+            z-index: 10;
         }
 
         #webcam-container {
@@ -203,9 +176,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
